populate deck